fix/overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,15 +27,9 @@ a {
   text-decoration: none;
 }
 
-@media (max-width: 75rem) {
-  .color-blur {
-    display: none;
-  }
+.color-blur > .vector {
+  max-width: 100vw;
 }
-
-/* * {
-  outline: 1px solid red;
-} */
 
 @media (min-width: 75rem) {
   #app {
